# echo-pup-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: release.yml
docs/: CATECHO_AGENT_SPEC.md  ECHOPUP_AGENT_SPEC.md  PERFORMANCE_OPTIMIZATION_ROADMAP.md  PRD.md  PROMPT-QA-LOG.md  README.md  SPEC.md  TYPECHOAI_AGENT_SPEC.md
docs/adr/: 0001-document-baseline-standardization.md  0002-status-bar-menu-sync-ipc.md  0003-hotkey-trigger-mode-and-adaptive-indicator.md  0004-streaming-asr-backend-migration-to-sherpa-sensevoice.md  0005-wayland-trigger-and-text-commit-strategy.md  README.md
docs/api/: README.md
docs/architecture/: performance-optimization-roadmap-v1.md  status-bar-menu-sync-plan-v1.md  streaming-asr-migration-plan-v1.md  technical-solution-v1.md  wayland-compatibility-plan-v1.md
docs/changes/: R-012-streaming-transcription.md  R-013-Linux-popup-implementation-plan.md  R-013-Linux-vs-macOS-comparison.md  R-014-aria2-style-model-download.md  R-016-wayland-trigger-and-text-commit-compatibility.md  changelog-20260319.md  changelog-20260331.md  changelog-20260417.md  status_indicator-refactor-plan.md
docs/design/: streaming-draft-commit.md  system-design-v1.md
docs/governance/: task-routing.md  zhou-tianzi.md
docs/history/: README.md
docs/human-doc/: BRD.md  CHANGE-LOG.md  PRD.md  TECH.md  USER-GUIDE.md
docs/operations/: runbook.md
docs/reports/: court-agent-roster.md  project-court-ledger.md
docs/requirements/: BRD.md  PRD.md
docs/reviews/: README.md  review-20260323-01.md
docs/setup/: environment-resources.md
docs/templates/: adr-template.md  report-template.md
docs/traceability/: requirements-to-implementation.md
scripts/: download_model.sh  download_punctuation_model.sh  perf_baseline.py  run_acceptance.sh
src/: linux_desktop.rs  main.rs  menu_core.rs  model_download.rs  punctuation.rs  runtime.rs  status_indicator.rs  text_processor.rs  trigger.rs  ui.rs  vad.rs
src/asr/: mod.rs  sherpa_onnx.rs  sherpa_paraformer.rs  types.rs  whisper.rs
src/audio/: buffer.rs  mod.rs  recorder.rs
src/commit/: mod.rs
src/config/: config.rs  mod.rs
src/hotkey/: listener.rs  mod.rs
src/input/: keyboard.rs  mod.rs
src/llm/: mod.rs  rewrite.rs
src/session/: final_result_manager.rs  mod.rs  partial_result_manager.rs
src/stt/: mod.rs  postprocess.rs  whisper.rs
