[package]
name = "echo-pup-rust"
version = "0.1.0"
edition = "2021"
description = "EchoPup - AI Voice Dictation Tool - 按住 F12 说话，自动输入到任意应用"

[[bin]]
name = "echopup"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"

# 配置
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 音频
cpal = "0.15"
hound = "3.5"

# Whisper
whisper-rs = "0.16"

# HTTP (使用 rustls 避免 openssl 依赖)
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

# 热键
global-hotkey = "0.7"

# 键盘输入
enigo = "0.6"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步
tokio = { version = "1", features = ["full"] }

# 其他
dirs = "5.0"
parking_lot = "0.12"
ctrlc = "3.2"
fs2 = "0.4"
