[package]
name = "echo-pup-rust"
version = "0.0.1"
edition = "2021"
description = "EchoPup - AI Voice Dictation Tool - 按住 F12 说话，自动输入到任意应用"

[features]
default = []
cargo-clippy = []

[[bin]]
name = "echopup"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# 配置
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 音频
cpal = "0.15"

# HTTP (使用 rustls 避免 openssl 依赖)
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

# 热键
global-hotkey = "0.7"

# 键盘输入
enigo = "0.6"

# 错误处理
anyhow = "1.0"

# 异步
tokio = { version = "1", features = ["full"] }

# 其他
dirs = "5.0"
parking_lot = "0.12"
ctrlc = { version = "3.2", features = ["termination"] }
fs2 = "0.4"
sherpa-onnx = "1.12.33"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
rdev = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
tray-icon = { version = "0.21.3", default-features = false }
muda = { version = "0.17.1", default-features = false, features = ["gtk"] }
gtk = "0.18.2"
image = { version = "0.25", default-features = false, features = ["png"] }
